# hackathon-aug-9

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fly.toml  pg.Dockerfile  requirements.txt
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py
backend/app/: __init__.py  config.py  extensions.py  routes.py
backend/app/agent/: agent.py  utils.py
backend/app/agent/accounts/: data.py  schemas.py
backend/app/agent/tools/: artifacts.py  definitions.py  example.py  functions.py
backend/app/chat/: controllers.py  schemas.py  services.py
backend/app/chat/accounts/: data.py  schemas.py
backend/app/user/: controllers.py  models.py
backend/migrations/versions/: 60c0cf9b1fd9_renamed_name_to_username.py  a7163da23160_rename_table_from_user_to_users.py  b324fc5dc56d_changed_friends_to_followers.py  fc863d9b21a9_added_models.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  const.ts  helper.ts  users.ts
frontend/src/components/: EditProfile.tsx  Logo.tsx  PrivateRoute.tsx  UserProfile.tsx
frontend/src/components/Auth/: AuthForm.tsx  LoginForm.tsx  RedirectAuth.tsx  SignUpForm.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatInterface.tsx  (+4 more)
frontend/src/data/: ProjectLogo.ts
frontend/src/pages/: Auth.tsx  Content.tsx  Feed.tsx  Home.tsx  Profile.tsx  Searched.tsx
frontend/src/types/: AuthFormProp.ts  Financial.ts  Friend.ts  LogInPropts.ts  Order.ts  Post.ts  SignUpProp.ts  User.ts  UserProfileProps.ts
(+11 files in other folders)
